# public/swagger/swagger.json
@@ -12,7 +12,45 @@
         "http",
         "https"
     ],
-    "paths": {},
+    "paths": {
+        "/User/doLogin": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "\u63d0\u4ea4\u8ba2\u5355",
+                "operationId": "doLogin",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "captcha:\u9a8c\u8bc1\u7801\uff0cusername:\u7535\u8bdd\uff0cpassword:\u5bc6\u7801,",
+                        "schema": {
+                            "properties": {
+                                "captcha": {
+                                    "description": "\u9a8c\u8bc1\u7801",
+                                    "type": "string"
+                                },
+                                "username": {
+                                    "description": "\u7535\u8bdd",
+                                    "type": "integer"
+                                },
+                                "password": {
+                                    "description": "\u5bc6\u7801",
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u64cd\u4f5c\u6210\u529f"
+                    }
+                }
+            }
+        }
+    },
     "definitions": {
         "goodsCart": {
             "properties": {
